ending the onchange event

--- a/06-evento-onchange.html
+++ b/06-evento-onchange.html
@@ -6,9 +6,9 @@
 
     <body>
         <select onchange="minhaFuncao(this.value)">
-            <option value="">Javascript</option>
-            <option>Python</option>
-            <option>C#</option>
+            <option value="1">Javascript</option>
+            <option value="2">Python</option>
+            <option value="3git add">C#</option>
             
         </select>
         
