--- a/06-evento-onchange.html
+++ b/06-evento-onchange.html
@@ -8,7 +8,7 @@
         <select onchange="minhaFuncao(this.value)">
             <option value="1">Javascript</option>
             <option value="2">Python</option>
-            <option value="3git add">C#</option>
+            <option value="3git">C#</option>
             
         </select>
         
